# easy-tracker

./: .gitignore  README.md
client/: .eslintcache  package-lock.json
migrations/: 20230518115455_create_users_table.down.sql  20230518115455_create_users_table.up.sql  20230625133325_create_files_table.down.sql  20230625133325_create_files_table.up.sql  README.md
server/: .env  Cargo.toml  README.md  config.json  jwt_private.key  jwt_public.key  pom.xml  sqlx-data.json  tls_certificate.pem  tls_certificate_key.pem
server/.sqlx/: query-0b3ec26ea91a627c3c406a220d40d2245dbfdbfbd22ec6ee85abd63723a2059b.json  query-13ef7ef357430e0e0443271adfc060c2393071e5638ae6d0e849fea57f9f1830.json  query-1bd02159c864210880da5cf14f3bffacf0b2d8fc38e4de2ccaa35feb3e7aced9.json  query-1c6c7280ac15c75aa1f5096cba8a833b36c0c795ed19308c3a4454a4b9065b2e.json  query-4f66132b7b8af451cac8d8c7da9034055cf0caf83723abba12b2f97484314c01.json  query-5ff79fffea7b2bf9f4a9350c1607d963ce67d864d430fa7a681be306ab73e464.json  query-657cf9cb9ba865b4dd827c9f82d83ab2c5ec9788c224a7e426f5a2c7c60f031a.json  query-a0a27e6782c51caa587f1017ea82b3f8185fe38deab3685ff561ba88bbc7b2a1.json  query-c6afdfcd799c89f23297d57a2114994bc1f6efc428ff418df9c58b4d77077d01.json  query-ddf457a1ff24db3c123adb1cfaea9f852bdfb79ca4b461d171c391664f79612a.json
server/src/: config.rs  database.rs  injector.rs  main.rs
server/src/common/: mod.rs
server/src/common/enumeration/: mod.rs
server/src/common/utility/: mod.rs
server/src/feature/: mod.rs
server/src/feature/auth/: mod.rs
server/src/feature/auth/controller/: data.rs  mod.rs
server/src/feature/auth/service/: mod.rs  test.rs
server/src/feature/crypto/model/: mod.rs
server/src/feature/crypto/service/: mod.rs  test.rs
server/src/feature/file/controller/: data.rs  mod.rs
server/src/feature/file/model/: mod.rs
server/src/feature/file/repository/: mod.rs  test.rs
server/src/feature/file/service/: mod.rs  test.rs
server/src/feature/user/: mod.rs
server/src/feature/user/controller/: data.rs  mod.rs
server/src/feature/user/model/: mod.rs
server/src/feature/user/repository/: mod.rs  test.rs  tests.rs
server/src/feature/user/service/: mod.rs  test.rs
server/src/main/java/app/easytracker/server/: EasyTrackerServerApplication.java
server/src/test/java/app/easytracker/server/: EasyTrackerServerApplicationTests.java
website/: .env  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+218 files in other folders)
