[package]
name = "server"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = { version = "4.3.1", features = ["openssl"] }
argon2 = "0.5.0"
async-trait = "0.1.71"
env_logger = { version = "0.10.0", features = ["color"] }
jsonwebtoken = "8.3.0"
log = "0.4.19"
nameof = "1.2.2"
no-panic = "0.1.25"
openssl = { version = "0.10.55", features = ["v111"] }
rand = { version = "0.8.5", features = ["log"] }
regex = "1.9.1"
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
shaku = "0.6.1"
shaku_actix = "0.2.0"
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "mysql", "macros", "time", "tls", "offline"] }
time = { version = "0.3.23", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive", "unic"] }
