[package]
name = "server"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.11.0", features = ["openssl"] }
argon2 = "0.5.3"
async-trait = "0.1.88"
env_logger = { version = "0.11.8", features = ["color"] }
jsonwebtoken = "9.3.1"
log = "0.4.27"
nameof = "1.2.2"
no-panic = "0.1.35"
openssl = "0.10.73"
rand = { version = "0.9.1", features = ["log"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shaku = "0.6.2"
shaku_actix = "0.2.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "mysql", "macros", "time", "tls-native-tls"] }
time = { version = "0.3.41", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive", "unic"] }
